--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <script src="https://cdn.jsdelivr.net/npm/p5@1.5.0/lib/p5.js"></script>
-    <script src="gyro_code.js"></script>
+    <script src="gyro.js"></script>
   </head>
   <body>
     <main>
